--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -1,5 +1,4 @@
-FROM golang:1.22.0-alpine3.19 as dependencies
-
+FROM golang:1.22.0-alpine3.19 AS dependencies
 WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
