--- a/config.yml
+++ b/config.yml
@@ -1,11 +1,13 @@
+# example config
 decorator:
   artifact_download_max_retries: 3
   artifact_download_retry_delay: 2
 server:
   port: 3000
   rate_limit: 3
+  api_key: <strong_token_from_env>
 gitlab_client:
-  ip: 0.0.0.0
+  ip: 127.0.0.1
   host: gitlab.example.com
 parser:
   sca:
