update core package

--- a/config.yml
+++ b/config.yml
@@ -6,6 +6,7 @@ server:
   port: 3000
   rate_limit: 3
   api_key: <strong_token_from_env>
+  supported_formats: ['*']
 gitlab_client:
   ip: 127.0.0.1
   host: gitlab.example.com
