--- a/Dockerfile-debug
+++ b/Dockerfile-debug
@@ -17,7 +17,7 @@ USER app
 COPY --chown=app:app --chmod=550 --from=build /main /home/app/main
 COPY --chown=app:app --chmod=550 --from=build /go/bin/dlv /home/app/dlv
 WORKDIR /home/app/
-COPY --chown=user:user ./FPRU_crit.sh ./FPRU_crit.sh
-COPY --chown=user:user ./FPRU_high.sh ./FPRU_high.sh
+COPY --chown=app:app ./FPRU_crit.sh ./FPRU_crit.sh
+COPY --chown=app:app ./FPRU_high.sh ./FPRU_high.sh
 
 CMD ["/home/user/dlv", "--listen=:40000", "--headless=true", "--api-version=2", "exec", "/home/app/main"]
