--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -14,6 +14,6 @@ USER app
 
 COPY --chown=app:app --chmod=550 --from=build /main /home/app/main
 WORKDIR /home/app/
-COPY --chown=user:user ./FPRU_crit.sh ./FPRU_crit.sh
-COPY --chown=user:user ./FPRU_high.sh ./FPRU_high.sh
+COPY --chown=app:app ./FPRU_crit.sh ./FPRU_crit.sh
+COPY --chown=app:app ./FPRU_high.sh ./FPRU_high.sh
 CMD ["./main"]
