--- a/Dockerfile-debug
+++ b/Dockerfile-debug
@@ -5,7 +5,7 @@ RUN go mod download
 
 FROM dependencies AS build
 COPY . ./
-RUN CGO_ENABLED=0 go build -o /main -ldflags="-w -s" ./cmd/app/
+RUN CGO_ENABLED=0 go build -o /mrdec -ldflags="-w -s" ./cmd/app/
 WORKDIR /go/src/
 RUN go install github.com/go-delve/delve/cmd/dlv@master
 
@@ -14,10 +14,10 @@ FROM golang:1.24.5-alpine3.22
 RUN addgroup -S app && adduser -SD app -G app
 USER app
 
-COPY --chown=app:app --chmod=550 --from=build /main /home/app/main
+COPY --chown=app:app --chmod=550 --from=build /mrdec /home/app/mrdec
 COPY --chown=app:app --chmod=550 --from=build /go/bin/dlv /home/app/dlv
 WORKDIR /home/app/
 COPY --chown=app:app ./FPRU_crit.sh ./FPRU_crit.sh
 COPY --chown=app:app ./FPRU_high.sh ./FPRU_high.sh
 
-CMD ["/home/user/dlv", "--listen=:40000", "--headless=true", "--api-version=2", "exec", "/home/app/main"]
+CMD ["/home/user/dlv", "--listen=:40000", "--headless=true", "--api-version=2", "exec", "/home/app/mrdec"]
